# garuff

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  justfile  pyproject.toml  skills-lock.json
.github/workflows/: qa.yml  release.yml
docs/: structure-plan.md
docs/adr/: 0001-namespaced-suppression-directive.md  0002-zero-runtime-dependencies.md  0003-rules-are-a-nominal-dataclass-hierarchy.md  0004-passive-result-types-live-in-schemas.md  0005-engine-opinion-seam-forkable.md  0006-project-scope-honest-over-gathered-files.md  0007-per-rule-options-are-a-baked-dataclass-field.md  0008-empty-glob-checked-against-whole-project.md  0009-file-exclusion-delegates-to-git.md  0010-default-scope-is-the-project-root.md  0011-invalid-directives-are-codeless-runner-diagnostics.md  0012-explanation-appendix-is-part-of-findings.md  0013-ruff-shaped-cli-check-and-rule.md  0014-explanations-are-option-templates.md  0015-gac007-exempt-modules-are-a-garuff-option.md  0016-verbosity-is-an-ordered-scale.md  0017-fixes-are-located-edits.md  0018-single-gated-release-workflow.md  0019-calver-via-bumpver.md
docs/agents/: code-conventions.md  domain.md  git-workflow.md  quality-gates.md  scratch.md  testing.md  triage-labels.md  workflow.md
src/garuff/: __init__.py  branding.py  cli.py  config.py  exceptions.py  explain.py  files.py  fixes.py  output.py  registry.py  rule.py  runner.py  schemas.py  suppression.py  violation.py
src/garuff/rules/: __init__.py
src/garuff/rules/agent/: __init__.py  adr.py  adr_consecutive.py  adr_duplicate.py
src/garuff/rules/code/: __init__.py  base_model.py  dataclass_kw_only.py  docstring_backticks.py  function_docstring.py  future_import.py  homogeneous_tuple.py  positional_args.py  possessive_my.py  possessive_prefix.py  redundant_ellipsis.py  self_return.py  syntax.py  type_checking_exempt.py
tests/: __init__.py  conftest.py  lintrun.py  test_adr_consecutive.py  test_adr_duplicate.py  test_adr_grouping.py  test_appendix.py  test_branding.py  test_cli.py  test_config.py  test_config_catalog.py  test_dogfood.py  test_files.py  test_fix.py  test_fixes.py  test_lintrun.py  test_output.py  test_possessive_prefix.py  test_project_scope.py  test_registry.py  test_rule.py  test_rule_command.py  test_runner.py  test_schemas.py  test_smoke.py  test_suppression.py
tests/rules/: __init__.py
tests/rules/agent/: __init__.py  test_adr.py  test_adr_consecutive.py  test_adr_duplicate.py
tests/rules/code/: __init__.py  test_base_model.py  test_dataclass_kw_only.py  test_docstring_backticks.py  test_function_docstring.py  test_future_import.py  test_homogeneous_tuple.py  test_positional_args.py  test_possessive_prefix.py  test_redundant_ellipsis.py  test_self_return.py  test_type_checking_exempt.py
