[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[project]
name = "garuff"
version = "0.1.0"
description = "Personal and opinionated Python linter rules aimed at coding agents."
readme = "README.md"
authors = [{ name = "Geir Arne Hjelle", email = "geirarne@gmail.com" }]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
garuff = "garuff:main"

[dependency-groups]
dev = [
    "ipython>=9.15.0",
    "prek>=0.4.6",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.56",
]

[tool.garuff]
# garuff dogfoods its own rules; this table is the first real consumer of the
# per-file-ignores feature.
[tool.garuff.per-file-ignores]
# GAC011 (possessive `my`) stays active across tests on purpose — tests are a
# place an agent might be tempted to reach for a `my_` name. Only the two files
# whose fixtures are deliberately *about* `my` opt out: the possessive rule's
# own tests, and the CLI sort-order test (which needs a text-scope violation,
# and GAC011 is the only text rule).
"tests/rules/code/test_possessive_prefix.py" = ["GAC011"]
"tests/test_cli.py" = ["GAC011"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
# COM812/D203/D213 conflict with the formatter or each other.
ignore = ["COM812", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "SLF001", "INP001", "S603", "S607"]

[tool.ruff.lint.flake8-type-checking]
# 3.14 dataclasses still read field annotations at decoration time, so imports
# used only in those annotations must stay at runtime, not move to TYPE_CHECKING.
exempt-modules = ["pathlib", "datetime", "typing"]
# The same is true for first-party types used as dataclass fields (e.g. a rule
# referenced by a Violation): treat @dataclass annotations as runtime references.
runtime-evaluated-decorators = ["dataclasses.dataclass"]

[tool.ty.src]
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
