[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[project]
name = "garuff"
version = "0.1.0"
description = "Personal and opinionated Python linter rules aimed at coding agents."
readme = "README.md"
authors = [{ name = "Geir Arne Hjelle", email = "geirarne@gmail.com" }]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
garuff = "garuff:main"

[dependency-groups]
dev = [
    "ipython>=9.15.0",
    "prek>=0.4.6",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.56",
]

#
# Garuff - dogfood
#
[tool.garuff]

[tool.garuff.per-file-ignores]
# GAC011: possessive `my` (needed for source and tests)
"src/garuff/rules/code/possessive_prefix.py" = ["GAC011"]
"tests/rules/code/test_possessive_prefix.py" = ["GAC011"]

[tool.garuff.rules.GAC008]
max_positional_args = 1

#
# Ruff - linter
#
[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
# COM812/D203/D213 conflict with the formatter or each other.
ignore = ["COM812", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "SLF001", "INP001", "S603", "S607"]

[tool.ruff.lint.flake8-type-checking]
# 3.14 dataclasses still read field annotations at decoration time, so imports
# used only in those annotations must stay at runtime, not move to TYPE_CHECKING.
exempt-modules = ["pathlib", "datetime", "typing"]
# The same is true for first-party types used as dataclass fields (e.g. a rule
# referenced by a Violation): treat @dataclass annotations as runtime references.
runtime-evaluated-decorators = ["dataclasses.dataclass"]

#
# Ty - static type checker
#
[tool.ty.src]
include = ["src", "tests"]

#
# Pytest - unit test runner
#
[tool.pytest.ini_options]
testpaths = ["tests"]
